--- a/ijvm_inspector/mainwindow.ui
+++ b/ijvm_inspector/mainwindow.ui
@@ -46,7 +46,7 @@
          <item>
           <widget class="QLabel" name="label">
            <property name="text">
-            <string>Constant Pool</string>
+            <string>Constant Pool:</string>
            </property>
           </widget>
          </item>
@@ -91,7 +91,7 @@
          <item>
           <widget class="QLabel" name="label_2">
            <property name="text">
-            <string>Local Variables</string>
+            <string>Local Variables:</string>
            </property>
           </widget>
          </item>
@@ -130,7 +130,7 @@
          <item>
           <widget class="QLabel" name="label_3">
            <property name="text">
-            <string>Memory Stack</string>
+            <string>Memory Stack:</string>
            </property>
           </widget>
          </item>
@@ -191,9 +191,10 @@
             </widget>
            </item>
            <item>
-            <widget class="QLabel" name="label_6">
+            <widget class="QLabel" name="pc_label">
              <property name="styleSheet">
-              <string notr="true">background-color: rgb(218, 218, 218);</string>
+              <string notr="true">background-color: rgb(218, 218, 218);
+color: rgb(0, 0, 0);</string>
              </property>
              <property name="text">
               <string>0</string>
@@ -235,12 +236,29 @@
          <item>
           <widget class="QLabel" name="next_istr_label">
            <property name="styleSheet">
-            <string notr="true">background-color: rgb(218, 218, 218);</string>
+            <string notr="true">background-color: rgb(218, 218, 218);
+color: rgb(0, 0, 0);</string>
            </property>
            <property name="text">
             <string/>
            </property>
           </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeType">
+            <enum>QSizePolicy::Fixed</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>165</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
          </item>
          <item>
           <spacer name="verticalSpacer_2">
@@ -278,6 +296,9 @@
            <property name="prefix">
             <string>wait between steps: </string>
            </property>
+           <property name="minimum">
+            <number>1</number>
+           </property>
           </widget>
          </item>
          <item>
@@ -290,7 +311,7 @@
         </layout>
        </item>
        <item alignment="Qt::AlignBottom">
-        <widget class="QPushButton" name="pushButton_2">
+        <widget class="QPushButton" name="stepForewardButton">
          <property name="text">
           <string>Step Forward</string>
          </property>
